# denied-sdk

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  test-local.md
.claude-plugin/: marketplace.json
.github/workflows/: quality-checks.yml
extensions/claude-code/: README.md
extensions/claude-code/.claude-plugin/: plugin.json
extensions/claude-code/hooks/: hooks.json  interceptor.js
extensions/openclaw/: README.md  index.ts  openclaw.plugin.json  package.json
extensions/openclaw/src/: handler.ts  types.ts
python/: .env.example  .gitignore  README.md  pyproject.toml
python/examples/: adk_agent_to_agent.py  adk_hosted_mcp.py  adk_local_tool.py  adk_plugin_example_usage.py  example_usage.py  log.json  sdk_usage.py
python/examples/claude_agent_sdk/: claude_sdk_auth.py  internal_tools.py  mcp_tools.py
python/examples/google_adk/: agent_to_agent.py  hosted_mcp.py  local_tool.py
python/integrations/adk/: __init__.py  async_client.py  config.py  context_mapper.py
python/src/denied_sdk/: __init__.py  client.py  enums.py  schemas.py
python/src/denied_sdk/enums/: __init__.py  entity.py
python/src/denied_sdk/integrations/: __init__.py
python/src/denied_sdk/integrations/claude_sdk/: README.md  __init__.py  callback.py  config.py  context_mapper.py  errors.py
python/src/denied_sdk/integrations/google_adk/: README.md  __init__.py  config.py  context_mapper.py  errors.py  plugin.py
python/src/denied_sdk/integrations/shared/: __init__.py  action_patterns.py  errors.py
python/src/denied_sdk/schemas/: __init__.py  check.py
python/tests/: __init__.py  test_async_client.py  test_client.py  test_hosted_api.py
python/tests/integrations/adk/: test_async_client.py  test_context_mapper.py  test_plugin.py
python/tests/integrations/claude_sdk/: test_callback.py  test_context_mapper.py
python/tests/integrations/google_adk/: __init__.py  test_async_client.py  test_context_mapper.py  test_plugin.py
python/tests/integrations/shared/: __init__.py  test_action_patterns.py
typescript/: .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
typescript/examples/: example-usage.ts  tsconfig.json
typescript/examples/claude-agent-sdk/: internal-tools.ts  mcp-tools.ts
typescript/src/: client.test.ts  client.ts  index.ts  schemas.ts
typescript/src/integrations/: index.ts
typescript/src/integrations/claude-sdk/: callback.test.ts  callback.ts  config.ts  context-mapper.test.ts  context-mapper.ts  index.ts
(+4 files in other folders)
