[project]
name = "denied-sdk"
version = "0.1.0"
description = "Denied SDK for Python"
authors = [{ name = "Denied Team" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/denied_sdk"]
